--- a/package.xml
+++ b/package.xml
@@ -3,7 +3,7 @@
     http://pear.php.net/dtd/tasks-1.0.xsd
     http://pear.php.net/dtd/package-2.0
     http://pear.php.net/dtd/package-2.0.xsd">
- <name>Crypt_HMAC2</name>
+ <name>Services_Yadis</name>
  <channel>pear.php.net</channel>
  <summary>Implementation of the Yadis Specification 1.0 protocol for PHP5.</summary>
  <description>Implementation of the Yadis Specification 1.0 protocol allowing a client to discover a list of Services a Yadis Identity Provider offers.</description>
@@ -14,7 +14,7 @@
   <active>yes</active>
  </lead>
  <date>2007-09-29</date>
- <time>18:42:11</time>
+ <time>18:46:18</time>
  <version>
   <release>0.2.0</release>
   <api>0.2.0</api>
