--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<package packagerversion="1.6.2" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0
-    http://pear.php.net/dtd/tasks-1.0.xsd
-    http://pear.php.net/dtd/package-2.0
-    http://pear.php.net/dtd/package-2.0.xsd">
+<package packagerversion="1.6.2" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0     http://pear.php.net/dtd/tasks-1.0.xsd     http://pear.php.net/dtd/package-2.0     http://pear.php.net/dtd/package-2.0.xsd">
  <name>Services_Yadis</name>
  <channel>pear.php.net</channel>
  <summary>Implementation of the Yadis Specification 1.0 protocol for PHP5.</summary>
@@ -13,32 +10,38 @@
   <email>padraic@php.net</email>
   <active>yes</active>
  </lead>
- <date>2007-09-29</date>
- <time>18:46:18</time>
+ <lead>
+  <name>Pádraic Brady</name>
+  <user>padraic</user>
+  <email>padraic@php.net</email>
+  <active>yes</active>
+ </lead>
+ <date>2007-09-30</date>
+ <time>12:43:21</time>
  <version>
-  <release>0.2.0</release>
-  <api>0.2.0</api>
+  <release>0.2.1</release>
+  <api>0.2.1</api>
  </version>
  <stability>
   <release>beta</release>
   <api>beta</api>
  </stability>
  <license uri="http://opensource.org/licenses/bsd-license.php">New BSD License</license>
- <notes>* Initial release!</notes>
+ <notes>* Fixed base directory install issue</notes>
  <contents>
-  <dir baseinstalldir="/" name="/">
+  <dir baseinstalldir="Services" name="/">
    <dir name="Yadis">
     <dir name="Xrds">
-     <file name="Namespace.php" role="php" />
-     <file name="Service.php" role="php" />
+     <file baseinstalldir="/" name="Namespace.php" role="php" />
+     <file baseinstalldir="/" name="Service.php" role="php" />
     </dir> <!-- //Yadis/Xrds -->
-    <file name="Exception.php" role="php" />
-    <file name="Service.php" role="php" />
-    <file name="Xrds.php" role="php" />
-    <file name="Xri.php" role="php" />
+    <file baseinstalldir="/" name="Exception.php" role="php" />
+    <file baseinstalldir="/" name="Service.php" role="php" />
+    <file baseinstalldir="/" name="Xrds.php" role="php" />
+    <file baseinstalldir="/" name="Xri.php" role="php" />
    </dir> <!-- //Yadis -->
-   <file name="test.php" role="php" />
-   <file name="Yadis.php" role="php" />
+   <file baseinstalldir="/" name="test.php" role="php" />
+   <file baseinstalldir="/" name="Yadis.php" role="php" />
   </dir> <!-- / -->
  </contents>
  <dependencies>
@@ -62,10 +65,36 @@
     <name>Validate</name>
     <channel>pear.php.net</channel>
    </package>
+   <package>
+    <name>PEAR</name>
+    <channel>pear.php.net</channel>
+    <min>1.3.6</min>
+   </package>
+   <package>
+    <name>HTTP_Request</name>
+    <channel>pear.php.net</channel>
+   </package>
+   <package>
+    <name>Validate</name>
+    <channel>pear.php.net</channel>
+   </package>
   </required>
  </dependencies>
  <phprelease />
  <changelog>
+  <release>
+   <version>
+    <release>0.2.1</release>
+    <api>0.2.1</api>
+   </version>
+   <stability>
+    <release>beta</release>
+    <api>beta</api>
+   </stability>
+   <date>2007-09-30</date>
+   <license uri="http://opensource.org/licenses/bsd-license.php">New BSD License</license>
+   <notes>* Fixed base directory install issue</notes>
+  </release>
   <release>
    <version>
     <release>0.2.0</release>
