--- a/package.xml
+++ b/package.xml
@@ -10,14 +10,8 @@
   <email>padraic@php.net</email>
   <active>yes</active>
  </lead>
- <lead>
-  <name>Pádraic Brady</name>
-  <user>padraic</user>
-  <email>padraic@php.net</email>
-  <active>yes</active>
- </lead>
  <date>2007-09-30</date>
- <time>12:43:21</time>
+ <time>13:20:44</time>
  <version>
   <release>0.2.1</release>
   <api>0.2.1</api>
@@ -65,19 +59,9 @@
     <name>Validate</name>
     <channel>pear.php.net</channel>
    </package>
-   <package>
-    <name>PEAR</name>
-    <channel>pear.php.net</channel>
-    <min>1.3.6</min>
-   </package>
-   <package>
-    <name>HTTP_Request</name>
-    <channel>pear.php.net</channel>
-   </package>
-   <package>
-    <name>Validate</name>
-    <channel>pear.php.net</channel>
-   </package>
+   <extension>
+    <name>simplexml</name>
+   </extension>
   </required>
  </dependencies>
  <phprelease />
@@ -94,19 +78,6 @@
    <date>2007-09-30</date>
    <license uri="http://opensource.org/licenses/bsd-license.php">New BSD License</license>
    <notes>* Fixed base directory install issue</notes>
-  </release>
-  <release>
-   <version>
-    <release>0.2.0</release>
-    <api>0.2.0</api>
-   </version>
-   <stability>
-    <release>beta</release>
-    <api>beta</api>
-   </stability>
-   <date>2007-09-29</date>
-   <license uri="http://opensource.org/licenses/bsd-license.php">New BSD License</license>
-   <notes>* Initial release!</notes>
   </release>
  </changelog>
 </package>
