--- a/package.xml
+++ b/package.xml
@@ -1,19 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<package packagerversion="1.7.1" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0     http://pear.php.net/dtd/tasks-1.0.xsd     http://pear.php.net/dtd/package-2.0     http://pear.php.net/dtd/package-2.0.xsd">
+<package packagerversion="1.8.1" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0     http://pear.php.net/dtd/tasks-1.0.xsd     http://pear.php.net/dtd/package-2.0     http://pear.php.net/dtd/package-2.0.xsd">
  <name>Services_Yadis</name>
  <channel>pear.php.net</channel>
  <summary>Implementation of the Yadis Specification 1.0 protocol for PHP5.</summary>
  <description>Implementation of the Yadis Specification 1.0 protocol allowing a client to discover a list of Services a Yadis Identity Provider offers.</description>
  <lead>
+  <name>Bill Shupp</name>
+  <user>shupp</user>
+  <email>shupp@php.net</email>
+  <active>yes</active>
+ </lead>
+ <lead>
   <name>Pádraic Brady</name>
   <user>padraic</user>
   <email>padraic@php.net</email>
-  <active>yes</active>
+  <active>no</active>
  </lead>
- <date>2008-12-07</date>
- <time>19:52:21</time>
+ <date>2009-05-29</date>
+ <time>20:02:05</time>
  <version>
-  <release>0.2.2</release>
+  <release>0.2.3</release>
   <api>0.2.1</api>
  </version>
  <stability>
@@ -21,33 +27,43 @@
   <api>beta</api>
  </stability>
  <license uri="http://opensource.org/licenses/bsd-license.php">New BSD License</license>
- <notes>Request #12226 - Renamed AllTests (PHPUnit3 / PEAR wide test suite)
-Bug #12973 Broken code in Yadis.php, lines 305-307
-Bug #12974 Fatal error: Call to undefined method Services_Yadis::_getHttpRequest()</notes>
+ <notes>
+* Fixed Bug #15683
+* Fixed Bug #15804
+ </notes>
  <contents>
-  <dir baseinstalldir="/" name="/">
-   <file baseinstalldir="Services" md5sum="7b6ad2f2ba50f021810a3b657cc8d817" name="tests/AllTests.php" role="test" />
-   <file baseinstalldir="Services" md5sum="0b8a04e491bc0bcb68d1dcf15dfbb84c" name="tests/TestConfiguration.php.dist" role="test" />
-   <file baseinstalldir="Services" md5sum="882c3297390f27cdf04b9883345049de" name="tests/TestHelper.php" role="test" />
-   <file baseinstalldir="Services" md5sum="e250b4079b012e427843685ee89b6709" name="tests/Yadis/AllTests.php" role="test" />
-   <file baseinstalldir="Services" md5sum="82f0c7874dd4b75c984fa8b7db31191e" name="tests/Yadis/XrdsTest.php" role="test" />
-   <file baseinstalldir="Services" md5sum="bea2632ae7b2f6d82f104a4c6464fa1e" name="tests/Yadis/Xrds/AllTests.php" role="test" />
-   <file baseinstalldir="Services" md5sum="7174fe6f614f9c3dc83d87e5c9a3b84d" name="tests/Yadis/Xrds/NamespaceTest.php" role="test" />
-   <file baseinstalldir="Services" md5sum="20f2d35e97552de53833bd0bef9ef4b6" name="Yadis/Exception.php" role="php" />
-   <file baseinstalldir="Services" md5sum="e69d804a3dbdc8c5ff55ff28b595a7e7" name="Yadis/Service.php" role="php" />
-   <file baseinstalldir="Services" md5sum="db6e71fe5d1e75ab6da1fdc426a136b8" name="Yadis/Xrds.php" role="php" />
-   <file baseinstalldir="Services" md5sum="308a4afebe8fb24085660ae4ff4670e4" name="Yadis/Xri.php" role="php" />
-   <file baseinstalldir="Services" md5sum="851a2654025ee9eb22fcb668ee9291d9" name="Yadis/Xrds/Namespace.php" role="php" />
-   <file baseinstalldir="Services" md5sum="6950fb6a4c3f6d31ed04c03c84f90a1d" name="Yadis/Xrds/Service.php" role="php" />
-   <file baseinstalldir="Services" md5sum="1303f468936a7e0751d7b0cf1670674d" name="generate_package_xml.php" role="php" />
-   <file baseinstalldir="Services" md5sum="65eacb61684472d4d03587af15d8e9ff" name="test.php" role="php" />
-   <file baseinstalldir="Services" md5sum="bf0c86b16cb12184310db0a74546fed3" name="Yadis.php" role="php" />
-  </dir>
+  <dir baseinstalldir="Services" name="/">
+   <dir name="tests">
+    <dir name="Yadis">
+     <dir name="Xrds">
+      <file name="AllTests.php" role="test" />
+      <file name="NamespaceTest.php" role="test" />
+     </dir> <!-- /tests/Yadis/Xrds -->
+     <file name="AllTests.php" role="test" />
+     <file name="XrdsTest.php" role="test" />
+    </dir> <!-- /tests/Yadis -->
+    <file name="AllTests.php" role="test" />
+    <file name="TestConfiguration.php.dist" role="test" />
+    <file name="TestHelper.php" role="test" />
+   </dir> <!-- /tests -->
+   <dir name="Yadis">
+    <dir name="Xrds">
+     <file name="Namespace.php" role="php" />
+     <file name="Service.php" role="php" />
+    </dir> <!-- /Yadis/Xrds -->
+    <file name="Exception.php" role="php" />
+    <file name="Service.php" role="php" />
+    <file name="Xrds.php" role="php" />
+    <file name="Xri.php" role="php" />
+   </dir> <!-- /Yadis -->
+   <file name="test.php" role="php" />
+   <file name="Yadis.php" role="php" />
+  </dir> <!-- / -->
  </contents>
  <dependencies>
   <required>
    <php>
-    <min>5.0.0</min>
+    <min>5.2.0</min>
    </php>
    <pearinstaller>
     <min>1.4.0b1</min>
@@ -65,6 +81,22 @@ Bug #12974 Fatal error: Call to undefined method Services_Yadis::_getHttpRequest
     <name>Validate</name>
     <channel>pear.php.net</channel>
    </package>
+   <package>
+    <name>PEAR</name>
+    <channel>pear.php.net</channel>
+    <min>1.3.6</min>
+   </package>
+   <package>
+    <name>HTTP_Request</name>
+    <channel>pear.php.net</channel>
+   </package>
+   <package>
+    <name>Validate</name>
+    <channel>pear.php.net</channel>
+   </package>
+   <extension>
+    <name>simplexml</name>
+   </extension>
    <extension>
     <name>simplexml</name>
    </extension>
@@ -74,16 +106,19 @@ Bug #12974 Fatal error: Call to undefined method Services_Yadis::_getHttpRequest
  <changelog>
   <release>
    <version>
-    <release>0.2.1</release>
-    <api>0.2.1</api>
+    <release>0.2.3</release>
+    <api>0.2.3</api>
    </version>
    <stability>
     <release>beta</release>
     <api>beta</api>
    </stability>
-   <date>2007-09-30</date>
+   <date>2009-05-29</date>
    <license uri="http://opensource.org/licenses/bsd-license.php">New BSD License</license>
-   <notes>* Fixed base directory install issue</notes>
+   <notes>
+* Fixed Bug #15683
+* Fixed Bug #15804
+   </notes>
   </release>
   <release>
    <version>
@@ -96,9 +131,26 @@ Bug #12974 Fatal error: Call to undefined method Services_Yadis::_getHttpRequest
    </stability>
    <date>2008-12-07</date>
    <license uri="http://opensource.org/licenses/bsd-license.php">New BSD License</license>
-   <notes>Request #12226 - Renamed AllTests (PHPUnit3 / PEAR wide test suite)
+   <notes>
+Request #12226 - Renamed AllTests (PHPUnit3 / PEAR wide test suite)
 Bug #12973 Broken code in Yadis.php, lines 305-307
-Bug #12974 Fatal error: Call to undefined method Services_Yadis::_getHttpRequest()</notes>
+Bug #12974 Fatal error: Call to undefined method Services_Yadis::_getHttpRequest()
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>0.2.1</release>
+    <api>0.2.1</api>
+   </version>
+   <stability>
+    <release>beta</release>
+    <api>beta</api>
+   </stability>
+   <date>2007-09-30</date>
+   <license uri="http://opensource.org/licenses/bsd-license.php">New BSD License</license>
+   <notes>
+* Fixed base directory install issue
+   </notes>
   </release>
  </changelog>
 </package>
