--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<package packagerversion="1.8.1" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0     http://pear.php.net/dtd/tasks-1.0.xsd     http://pear.php.net/dtd/package-2.0     http://pear.php.net/dtd/package-2.0.xsd">
+<package packagerversion="1.9.0" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0
+    http://pear.php.net/dtd/tasks-1.0.xsd
+    http://pear.php.net/dtd/package-2.0
+    http://pear.php.net/dtd/package-2.0.xsd">
  <name>Services_Yadis</name>
  <channel>pear.php.net</channel>
  <summary>Implementation of the Yadis Specification 1.0 protocol for PHP5.</summary>
@@ -10,17 +13,11 @@
   <email>shupp@php.net</email>
   <active>yes</active>
  </lead>
- <lead>
-  <name>Pádraic Brady</name>
-  <user>padraic</user>
-  <email>padraic@php.net</email>
-  <active>no</active>
- </lead>
- <date>2009-05-29</date>
- <time>20:02:05</time>
+ <date>2009-10-28</date>
+ <time>21:19:33</time>
  <version>
-  <release>0.2.3</release>
-  <api>0.2.1</api>
+  <release>0.3.0</release>
+  <api>0.3.0</api>
  </version>
  <stability>
   <release>beta</release>
@@ -28,8 +25,7 @@
  </stability>
  <license uri="http://opensource.org/licenses/bsd-license.php">New BSD License</license>
  <notes>
-* Fixed Bug #15683
-* Fixed Bug #15804
+* Enabled existing XRI support (first pass)
  </notes>
  <contents>
   <dir baseinstalldir="Services" name="/">
@@ -81,24 +77,14 @@
     <name>Validate</name>
     <channel>pear.php.net</channel>
    </package>
-   <package>
-    <name>PEAR</name>
-    <channel>pear.php.net</channel>
-    <min>1.3.6</min>
-   </package>
-   <package>
-    <name>HTTP_Request</name>
-    <channel>pear.php.net</channel>
-   </package>
-   <package>
-    <name>Validate</name>
-    <channel>pear.php.net</channel>
-   </package>
    <extension>
     <name>simplexml</name>
    </extension>
    <extension>
-    <name>simplexml</name>
+    <name>date</name>
+   </extension>
+   <extension>
+    <name>dom</name>
    </extension>
   </required>
  </dependencies>
@@ -106,50 +92,17 @@
  <changelog>
   <release>
    <version>
-    <release>0.2.3</release>
-    <api>0.2.3</api>
+    <release>0.3.0</release>
+    <api>0.3.0</api>
    </version>
    <stability>
     <release>beta</release>
     <api>beta</api>
    </stability>
-   <date>2009-05-29</date>
+   <date>2009-10-28</date>
    <license uri="http://opensource.org/licenses/bsd-license.php">New BSD License</license>
    <notes>
-* Fixed Bug #15683
-* Fixed Bug #15804
-   </notes>
-  </release>
-  <release>
-   <version>
-    <release>0.2.2</release>
-    <api>0.2.1</api>
-   </version>
-   <stability>
-    <release>beta</release>
-    <api>beta</api>
-   </stability>
-   <date>2008-12-07</date>
-   <license uri="http://opensource.org/licenses/bsd-license.php">New BSD License</license>
-   <notes>
-Request #12226 - Renamed AllTests (PHPUnit3 / PEAR wide test suite)
-Bug #12973 Broken code in Yadis.php, lines 305-307
-Bug #12974 Fatal error: Call to undefined method Services_Yadis::_getHttpRequest()
-   </notes>
-  </release>
-  <release>
-   <version>
-    <release>0.2.1</release>
-    <api>0.2.1</api>
-   </version>
-   <stability>
-    <release>beta</release>
-    <api>beta</api>
-   </stability>
-   <date>2007-09-30</date>
-   <license uri="http://opensource.org/licenses/bsd-license.php">New BSD License</license>
-   <notes>
-* Fixed base directory install issue
+* Enabled existing XRI support (first pass)
    </notes>
   </release>
  </changelog>
