--- a/package.xml
+++ b/package.xml
@@ -13,8 +13,8 @@
   <email>shupp@php.net</email>
   <active>yes</active>
  </lead>
- <date>2009-11-22</date>
- <time>17:58:04</time>
+ <date>2009-12-15</date>
+ <time>18:56:09</time>
  <version>
   <release>0.4.0</release>
   <api>0.4.0</api>
@@ -74,8 +74,9 @@
     <min>1.3.6</min>
    </package>
    <package>
-    <name>HTTP_Request</name>
+    <name>HTTP_Request2</name>
     <channel>pear.php.net</channel>
+    <min>0.5.1</min>
    </package>
    <package>
     <name>Validate</name>
@@ -107,7 +108,7 @@
     <release>beta</release>
     <api>beta</api>
    </stability>
-   <date>2009-11-22</date>
+   <date>2009-12-15</date>
    <license uri="http://opensource.org/licenses/bsd-license.php">New BSD License</license>
    <notes>
 * Moved to HTTP_Request2
