--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<package packagerversion="1.9.0" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0
-    http://pear.php.net/dtd/tasks-1.0.xsd
-    http://pear.php.net/dtd/package-2.0
-    http://pear.php.net/dtd/package-2.0.xsd">
+<package packagerversion="1.9.1" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0     http://pear.php.net/dtd/tasks-1.0.xsd     http://pear.php.net/dtd/package-2.0     http://pear.php.net/dtd/package-2.0.xsd">
  <name>Services_Yadis</name>
  <channel>pear.php.net</channel>
  <summary>Implementation of the Yadis Specification 1.0 protocol for PHP5.</summary>
@@ -13,11 +10,17 @@
   <email>shupp@php.net</email>
   <active>yes</active>
  </lead>
- <date>2009-12-15</date>
- <time>18:56:09</time>
+ <lead>
+  <name>Bill Shupp</name>
+  <user>shupp</user>
+  <email>shupp@php.net</email>
+  <active>yes</active>
+ </lead>
+ <date>2010-08-28</date>
+ <time>17:17:39</time>
  <version>
-  <release>0.4.0</release>
-  <api>0.4.0</api>
+  <release>0.5.0</release>
+  <api>0.5.0</api>
  </version>
  <stability>
   <release>beta</release>
@@ -25,7 +28,8 @@
  </stability>
  <license uri="http://opensource.org/licenses/bsd-license.php">New BSD License</license>
  <notes>
-* Moved to HTTP_Request2
+* Fixed #17829 - redirect loop was happening when X-XRDS-Location was present with the document itself
+* Removed dependency on PEAR_Exception
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -69,9 +73,17 @@
     <min>1.4.0b1</min>
    </pearinstaller>
    <package>
-    <name>PEAR</name>
+    <name>HTTP_Request2</name>
     <channel>pear.php.net</channel>
-    <min>1.3.6</min>
+    <min>0.5.1</min>
+   </package>
+   <package>
+    <name>Validate</name>
+    <channel>pear.php.net</channel>
+   </package>
+   <package>
+    <name>Net_URL2</name>
+    <channel>pear.php.net</channel>
    </package>
    <package>
     <name>HTTP_Request2</name>
@@ -95,10 +107,35 @@
    <extension>
     <name>dom</name>
    </extension>
+   <extension>
+    <name>simplexml</name>
+   </extension>
+   <extension>
+    <name>date</name>
+   </extension>
+   <extension>
+    <name>dom</name>
+   </extension>
   </required>
  </dependencies>
  <phprelease />
  <changelog>
+  <release>
+   <version>
+    <release>0.5.0</release>
+    <api>0.5.0</api>
+   </version>
+   <stability>
+    <release>beta</release>
+    <api>beta</api>
+   </stability>
+   <date>2010-08-28</date>
+   <license uri="http://opensource.org/licenses/bsd-license.php">New BSD License</license>
+   <notes>
+* Fixed #17829 - redirect loop was happening when X-XRDS-Location was present with the document itself
+* Removed dependency on PEAR_Exception
+   </notes>
+  </release>
   <release>
    <version>
     <release>0.4.0</release>
