Enhancement: composer setup

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     ],
     "autoload": {
         "psr-0": {
-            "Services_Yadis": "./"
+            "Services": "./"
         }
     },
     "description": "More info available on: http://pear.php.net/package/Services_Yadis",
@@ -33,7 +33,8 @@
     },
     "type": "library",
     "require": {
-        "pear/pear_exception": "*"
+        "pear/pear_exception": "*",
+        "pear/http_request2": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "*"
