--- a/package.xml
+++ b/package.xml
@@ -2,30 +2,18 @@
 <package packagerversion="1.9.1" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0     http://pear.php.net/dtd/tasks-1.0.xsd     http://pear.php.net/dtd/package-2.0     http://pear.php.net/dtd/package-2.0.xsd">
  <name>Services_Yadis</name>
  <channel>pear.php.net</channel>
- <summary>Implementation of the Yadis Specification 1.0 protocol for PHP5.</summary>
+ <summary>Implementation of the Yadis Specification 1.0 protocol</summary>
  <description>Implementation of the Yadis Specification 1.0 protocol allowing a client to discover a list of Services a Yadis Identity Provider offers.</description>
  <lead>
   <name>Bill Shupp</name>
   <user>shupp</user>
   <email>shupp@php.net</email>
-  <active>yes</active>
+  <active>no</active>
  </lead>
- <lead>
-  <name>Bill Shupp</name>
-  <user>shupp</user>
-  <email>shupp@php.net</email>
-  <active>yes</active>
- </lead>
- <lead>
-  <name>Bill Shupp</name>
-  <user>shupp</user>
-  <email>shupp@php.net</email>
-  <active>yes</active>
- </lead>
- <date>2011-01-01</date>
- <time>12:59:16</time>
+ <date>2014-05-19</date>
+ <time>14:08:23</time>
  <version>
-  <release>0.5.1</release>
+  <release>0.5.2</release>
   <api>0.5.1</api>
  </version>
  <stability>
@@ -34,8 +22,9 @@
  </stability>
  <license uri="http://opensource.org/licenses/bsd-license.php">New BSD License</license>
  <notes>
-* Added Services_Yadis::validateURI() to get around strict warnings
+  * Fix bug #19236: Wrong parameters for Exception
  </notes>
+
  <contents>
   <dir baseinstalldir="/" name="/">
    <dir name="examples">
@@ -55,6 +44,7 @@
     <file name="Yadis.php" role="php" />
    </dir> <!-- /Services -->
    <dir name="tests">
+    <file name="YadisTest.php" role="test" />
     <dir name="Yadis">
      <dir name="Xrds">
       <file name="NamespaceTest.php" role="test" />
@@ -66,6 +56,7 @@
    </dir> <!-- /tests -->
   </dir> <!-- / -->
  </contents>
+
  <dependencies>
   <required>
    <php>
@@ -87,63 +78,29 @@
     <name>Net_URL2</name>
     <channel>pear.php.net</channel>
    </package>
-   <package>
-    <name>HTTP_Request2</name>
-    <channel>pear.php.net</channel>
-    <min>0.5.1</min>
-   </package>
-   <package>
-    <name>Validate</name>
-    <channel>pear.php.net</channel>
-   </package>
-   <package>
-    <name>Net_URL2</name>
-    <channel>pear.php.net</channel>
-   </package>
-   <package>
-    <name>HTTP_Request2</name>
-    <channel>pear.php.net</channel>
-    <min>0.5.1</min>
-   </package>
-   <package>
-    <name>Validate</name>
-    <channel>pear.php.net</channel>
-   </package>
-   <package>
-    <name>Net_URL2</name>
-    <channel>pear.php.net</channel>
-   </package>
-   <extension>
-    <name>simplexml</name>
-   </extension>
-   <extension>
-    <name>date</name>
-   </extension>
-   <extension>
-    <name>dom</name>
-   </extension>
-   <extension>
-    <name>simplexml</name>
-   </extension>
-   <extension>
-    <name>date</name>
-   </extension>
-   <extension>
-    <name>dom</name>
-   </extension>
-   <extension>
-    <name>simplexml</name>
-   </extension>
-   <extension>
-    <name>date</name>
-   </extension>
-   <extension>
-    <name>dom</name>
-   </extension>
   </required>
  </dependencies>
+
  <phprelease />
+
  <changelog>
+
+  <release>
+   <version>
+    <release>0.5.2</release>
+    <api>0.5.1</api>
+   </version>
+   <stability>
+    <release>beta</release>
+    <api>beta</api>
+   </stability>
+   <date>2014-05-19</date>
+   <license uri="http://opensource.org/licenses/bsd-license.php">New BSD License</license>
+   <notes>
+    * Fix bug #19236: Wrong parameters for Exception
+   </notes>
+  </release>
+
   <release>
    <version>
     <release>0.5.1</release>
@@ -159,6 +116,7 @@
 * Added Services_Yadis::validateURI() to get around strict warnings
    </notes>
   </release>
+
   <release>
    <version>
     <release>0.5.0</release>
@@ -175,6 +133,7 @@
 * Removed dependency on PEAR_Exception
    </notes>
   </release>
+
   <release>
    <version>
     <release>0.4.0</release>
@@ -190,5 +149,6 @@
 * Moved to HTTP_Request2
    </notes>
   </release>
+
  </changelog>
 </package>
