update composer.json, add README

--- a/composer.json
+++ b/composer.json
@@ -11,19 +11,22 @@
             "Services": "./"
         }
     },
-    "description": "More info available on: http://pear.php.net/package/Services_Yadis",
+    "description": "Implementation of the Yadis Specification 1.0 protocol",
     "include-path": [
         "./"
     ],
     "license": "New BSD License",
     "name": "pear/services_yadis",
+    "homepage": "http://pear.php.net/package/Services_Yadis",
     "support": {
         "issues": "http://pear.php.net/bugs/search.php?cmd=display&package_name[]=Services_Yadis",
         "source": "https://github.com/pear/Services_Yadis"
     },
     "type": "library",
     "require": {
-        "pear/http_request2": "*"
+        "pear/http_request2": "~2.2.0",
+        "pear/net_url2": "~2.2.0",
+        "pear/validate": ">=0.8.5"
     },
     "require-dev": {
         "phpunit/phpunit": "*"
