--- a/package.xml
+++ b/package.xml
@@ -10,10 +10,10 @@
   <email>shupp@php.net</email>
   <active>no</active>
  </lead>
- <date>2014-05-19</date>
+ <date>2017-08-24</date>
  <time>14:08:23</time>
  <version>
-  <release>0.5.2</release>
+  <release>0.5.3</release>
   <api>0.5.1</api>
  </version>
  <stability>
@@ -22,7 +22,7 @@
  </stability>
  <license uri="http://opensource.org/licenses/bsd-license.php">New BSD License</license>
  <notes>
-  * Fix bug #19236: Wrong parameters for Exception
+  * Update dependency versions
  </notes>
 
  <contents>
@@ -60,23 +60,25 @@
  <dependencies>
   <required>
    <php>
-    <min>5.2.0</min>
+    <min>5.5.0</min>
    </php>
    <pearinstaller>
-    <min>1.4.0b1</min>
+    <min>1.9.0</min>
    </pearinstaller>
    <package>
     <name>HTTP_Request2</name>
     <channel>pear.php.net</channel>
-    <min>0.5.1</min>
+    <min>2.3.0</min>
    </package>
    <package>
     <name>Validate</name>
     <channel>pear.php.net</channel>
+    <min>0.8.5</min>
    </package>
    <package>
     <name>Net_URL2</name>
     <channel>pear.php.net</channel>
+    <min>2.2.0</min>
    </package>
   </required>
  </dependencies>
@@ -84,6 +86,22 @@
  <phprelease />
 
  <changelog>
+
+  <release>
+   <version>
+    <release>0.5.3</release>
+    <api>0.5.1</api>
+   </version>
+   <stability>
+    <release>beta</release>
+    <api>beta</api>
+   </stability>
+   <date>2017-08-24</date>
+   <license uri="http://opensource.org/licenses/bsd-license.php">New BSD License</license>
+   <notes>
+    Update dependency versions
+   </notes>
+  </release>
 
   <release>
    <version>
