--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,11 @@
 language: php
 sudo: false
 php:
-  - 7
-  - 5.6
-  - 5.5
-  - 5.4
+  - 7.4
+  - 8.0
+  - 8.1
+  - 8.2
 install:
-  - pear install http_request2 net_url2 validate-beta
+  - composer install
 script:
-  - cd tests
-  - phpunit --coverage-text .
+  - ./vendor/bin/phpunit
